2002-11-25 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.1.

2002-11-24 TADA Tadashi <sho@spc.gr.jp>
	* title_navi plugin: title_navi.max option.
	* add README.en.

2002-11-22 TADA Tadashi <sho@spc.gr.jp>
	* item length limit on whatsnew-list and recent-entry[2].
	* tdiary.conf.sample: fix typo.

2002-11-21 TADA Tadashi <sho@spc.gr.jp>
	* add plugin/recent-entry2.rb.
	* add comments into plugin files.
	* add README, COPYING.

2002-11-20 TADA Tadashi <sho@spc.gr.jp>
	* add arcgive_dropdown plugin.
	* archive.rb: list to reverse.

2002-11-18 TADA Tadashi <sho@spc.gr.jp>
	* Initial revision