@@ -1,3 +1,6 @@
+2002-12-13 TADA Tadashi <sho@spc.gr.jp>
+	* whatsnew-list: remove hidden article from the list.
+
 2002-11-25 TADA Tadashi <sho@spc.gr.jp>
 	* release 1.5.1.
 
